8219524: Shenandoah misreports "committed" size in MemoryMXBean

Reviewed-by: rkennke, zgu